Refactor commands & permission / add #checkUpdate / add auto download & load libs